--- a/djangular/scrumboard_app/templates/home.html
+++ b/djangular/scrumboard_app/templates/home.html
@@ -8,18 +8,24 @@
     {% verbatim %}
         <!-- DIV is VIEW (HTML element to display data) -->
         <div ng-controller="ScrumboardController">
-            <div ng-repeat="list in data">
+            <div class="list" ng-repeat="list in data">
                 <h3>{{ list.name }}</h3>
                 <ul>
-                    <li ng-repeat="card in list.cards">{{ card.title }}</li>
+                    <li ng-repeat="card in list.cards">
+                        <scrumboard-card>
+                        </scrumboard-card>
+                    </li>
                 </ul>
-                <input type="text" ng-model="new_title" />
-                <button ng-click="add(list, new_title)">+</button>
+                <div class="flex">
+                    <input type="text" ng-model="new_title" />
+                    <button ng-click="add(list, new_title)">+</button>
+                </div>
             </div>
         </div>
     {% endverbatim %}
         <script src ="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
         <script src ="{% static 'scrumboard_app/scrumboard.js' %}"></script>
+        <script src ="{% static 'scrumboard_app/card.directive.js' %}"></script>
     </body>
         <!--Scope is dependancy. Second argument of controller method is list of dependencies
         // and last item is actual controller function
