--- a/djangular/scrumboard_app/templates/home.html
+++ b/djangular/scrumboard_app/templates/home.html
@@ -2,30 +2,17 @@
 {% load static %}
     <head>
         <title>Scrumboard Demo</title>
-        <link rel="stylesheet" href="{% static 'scrumboard_app/base.css' %}">
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
     </head>
     <body ng-app="scrumboard.demo">
-    {% verbatim %}
-        <!-- DIV is VIEW (HTML element to display data) -->
-        <div ng-controller="ScrumboardController">
-            <div class="list" ng-repeat="list in data">
-                <h3>{{ list.name }}</h3>
-                <ul>
-                    <li ng-repeat="card in list.cards">
-                        <scrumboard-card>
-                        </scrumboard-card>
-                    </li>
-                </ul>
-                <div class="flex">
-                    <input type="text" ng-model="new_title" />
-                    <button ng-click="add(list, new_title)">+</button>
-                </div>
-            </div>
-        </div>
-    {% endverbatim %}
+        <ng-view></ng-view>
         <script src ="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
-        <script src ="{% static 'scrumboard_app/scrumboard.js' %}"></script>
-        <script src ="{% static 'scrumboard_app/card.directive.js' %}"></script>
+        <script src ="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular-route.js"></script>
+        <script src ="{% static 'js/scrumboard.js' %}"></script>
+        <script src ="{% static 'js/scrumboard.config.js' %}"></script>
+        <script src ="{% static 'js/card.directive.js' %}"></script>
+        <script src ="{% static 'js/login.controller.js' %}"></script>
+
     </body>
         <!--Scope is dependancy. Second argument of controller method is list of dependencies
         // and last item is actual controller function
