--- a/djangular/static/css/base.css
+++ b/djangular/static/css/base.css
@@ -1,3 +1,4 @@
+
 html {
     font-size: 1em;
     line-height:1.4;
@@ -11,6 +12,7 @@ html {
     background-color: MediumSeaGreen;
 }
 .list h3 {
+    display: inline;
     padding-left: 7px;
     color: white;
 }
@@ -58,4 +60,14 @@ resize: vertical;
 
 .flex button {
     flex-basis: auto;
+}
+
+.logout,
+.show-filters {
+    float: right;
+    }
+
+.list-sort {
+color: white;
+margin-left: 7px;
 }
