Angular login service

--- a/djangular/scrumboard_app/templates/home.html
+++ b/djangular/scrumboard_app/templates/home.html
@@ -12,6 +12,7 @@
         <script src ="{% static 'js/scrumboard.config.js' %}"></script>
         <script src ="{% static 'js/card.directive.js' %}"></script>
         <script src ="{% static 'js/login.controller.js' %}"></script>
+        <script src ="{% static 'js/login.service.js' %}"></script>
 
     </body>
         <!--Scope is dependancy. Second argument of controller method is list of dependencies
